termino la parte de destop

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -8,6 +8,12 @@
   text-decoration: none;
 }
 
+section {
+  scroll-margin: 90px;
+}
+
+/* header */
+
 #container-header {
   display: flex;
   background-color: rgba(199, 199, 199, .5);
@@ -39,7 +45,7 @@
 #promo {
   width: 100%;
   background-color: rgb(88, 88, 88);
-  margin-top: 4em;
+  margin-top: 5.2em;
   padding: 5em;
 }
 
@@ -56,7 +62,7 @@ button {
 }
 
 
-/* container */
+/* container, productos*/
 
 #container {
   width: 100%;
@@ -72,6 +78,28 @@ button {
   color: #7a7a7a;
 }
 
+.producto {
+  width: 200px;
+  background-color: #353535;
+  border-radius: 20px;
+  margin: 10px;
+}
+
+.producto img {
+  width: 100%;
+  border-radius: 20px 20px 0px 0px;
+}
+
+.producto h3,
+p,
+a {
+  margin: 10px;
+}
+
+.producto a:hover {
+  color: #fff;
+}
+
 /* sitios-web */
 
 #sitios-web {
@@ -82,15 +110,7 @@ button {
 }
 
 #sitios-web h1 {
-  width: 85%;
-}
-
-#sitios-web .producto {
-  width: 200px;
-}
-
-#sitios-web .producto img {
-  width: 100%;
+  width: 87%;
 }
 
 /* consolas */
@@ -103,15 +123,7 @@ button {
 }
 
 #consolas h1 {
-  width: 85%;
-}
-
-#consolas .producto {
-  width: 200px;
-}
-
-#consolas .producto img {
-  width: 100%;
+  width: 87%;
 }
 
 /* logos */
@@ -124,20 +136,89 @@ button {
 }
 
 #logos h1 {
-  width: 85%;
+  width: 87%;
+}
+
+/* footer */
+
+#contac {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+#contac .containerFooter{
+  width: 100%;
+  background-color: royalblue;
+  display: flex;
+}
+
+#contac .redes,
+.form,
+.copyright {
+  margin: 15px;
+}
+
+#contac .form .containerForm{
+  margin-left: 5em;
+}
+
+#contac .forms, .nombre, .mensaje {
+  display: flex;
+  flex-wrap: wrap;
+  width: 300px;
   margin: 10px;
 }
 
-#logos .producto {
-  width: 200px;
+#contac .form .nombre{
+  height: 25px;
 }
 
-#logos .producto img {
+#contac .form .mensaje{
+  height: 200px;
+  resize: none;
+}
+
+#contac .redes{
+  margin-left: 5em;
+  width: 50%;
+}
+
+/* icons */
+
+#contac .redes a i {
+  font-size: 25px;
+  color: #000;
+}
+
+#contac .linkedin:hover {
+  color: #00146d;
+}
+
+#contac .github:hover {
+  color: #0a0505;
+}
+
+#contac .instagram:hover {
+  color: #ff1aa7;
+}
+
+#contac .facebook:hover {
+  color: #2600ff;
+}
+
+#contac .twitter:hover {
+  color: #005f6b;
+}
+
+#contac .spotify:hover {
+  color: #06b600;
+}
+
+/* copyright */
+
+#contac .copyright {
   width: 100%;
+  text-align: center;
+  font-size: 9px;
 }
-
-
-
-
-
-
