--- a/asset/css/celular.css
+++ b/asset/css/celular.css
@@ -1,205 +1,58 @@
-section {
-  scroll-margin: 90px;
-}
-
 /* header */
 
 #container-header {
-  display: flex;
-  background-color: rgba(199, 199, 199, .5);
-  padding: 5px;
-  position: fixed;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
   width: 100%;
 }
 
-/* promo, main */
+/* main */
 
 #container-main {
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
 }
 
 #promo {
   width: 100%;
-  background-color: rgb(88, 88, 88);
-  margin-top: 5.2em;
-  padding: 5em;
+  margin-top: -0.4em;
 }
 
-#promo h1,
-p,
-button {
-  margin: 10px;
-}
-
-#promo button {
-  border-radius: 25px;
-  width: 10em;
-  height: 3em;
-}
-
-
-/* container, productos*/
-
-#container {
-  width: 100%;
-  margin-top: 10px;
-  padding: 4em;
-}
-
-#container .verTodo i {
-  margin: 10px;
-}
-
-#container .verProducto {
-  color: #7a7a7a;
-}
-
-.producto {
-  width: 100px;
+#container .producto {
+  width: 300px;
   background-color: #353535;
   border-radius: 20px;
   margin: 10px;
 }
 
-.producto img {
-  width: 100%;
-  border-radius: 20px 20px 0px 0px;
+#container {
+  width: 96%;
+  margin-top: 10px;
+  padding: 0em;
 }
 
-.producto h3,
-p,
-a {
-  margin: 10px;
-}
-
-.producto a:hover {
-  color: #fff;
-}
-
-/* sitios-web */
+/* sitios web */
 
 #sitios-web {
   width: 100%;
-  margin: 10px;
-  display: flex;
-  flex-wrap: wrap;
 }
 
-#sitios-web h1 {
-  width: 87%;
-}
-
-/* consolas */
-
-#consolas {
+#sitios-web .text {
   width: 100%;
-  margin: 10px;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-#consolas h1 {
-  width: 87%;
-}
-
-/* logos */
-
-#logos {
-  width: 100%;
-  margin: 10px;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-#logos h1 {
-  width: 87%;
 }
 
 /* footer */
 
-#contac {
+#contac .containerFooter {
+  width: 100%;
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
 }
 
-#contac .containerFooter{
+#contac .containerFooter .form .nombre {
   width: 100%;
-  background-color: royalblue;
-  display: flex;
+  margin: 0;
 }
 
-#contac .redes,
-.form,
-.copyright {
-  margin: 15px;
-}
-
-#contac .form .containerForm{
-  margin-left: 5em;
-}
-
-#contac .forms, .nombre, .mensaje {
-  display: flex;
-  flex-wrap: wrap;
-  width: 300px;
-  margin: 10px;
-}
-
-#contac .form .nombre{
-  height: 25px;
-}
-
-#contac .form .mensaje{
-  height: 200px;
-  resize: none;
-}
-
-#contac .redes{
-  margin-left: 5em;
-  width: 50%;
-}
-
-/* icons */
-
-#contac .redes a i {
-  font-size: 25px;
-  color: #000;
-}
-
-#contac .linkedin:hover {
-  color: #00146d;
-}
-
-#contac .github:hover {
-  color: #0a0505;
-}
-
-#contac .instagram:hover {
-  color: #ff1aa7;
-}
-
-#contac .facebook:hover {
-  color: #2600ff;
-}
-
-#contac .twitter:hover {
-  color: #005f6b;
-}
-
-#contac .spotify:hover {
-  color: #06b600;
-}
-
-/* copyright */
-
-#contac .copyright {
+#contac .containerFooter .form .mensaje {
   width: 100%;
-  text-align: center;
-  font-size: 9px;
+  margin-left: 0;
 }
